# shoreline_change_uncertainty

./: .gitignore  LICENSE  MIGRATION.md  README.md  SURF.spec  ShorelineUncertainty.spec  pyproject.toml  requirements.txt
.github/scripts/: update_changelog.py
.github/workflows/: update-changelog.yml
build_exe/ShorelineUncertainty/: PKG-00.toc  PYZ-00.toc  warn-ShorelineUncertainty.txt  xref-ShorelineUncertainty.html
dist_exe/SURF/_internal/: _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _multiprocessing.pyd  _socket.pyd  _sqlite3.pyd  _tkinter.pyd  pyexpat.pyd
dist_exe/SURF/_internal/numpy-2.5.1.dist-info/: RECORD
dist_exe/SURF/_internal/pyogrio/: __init__.py  _err.c  _io.c  _version.py  _vsi.c  raw.py
dist_exe/SURF/_internal/pyogrio-0.13.0.dist-info/: METADATA
dist_exe/SURF/_internal/pyogrio/gdal_data/: GDAL-targets.cmake  GDALConfigVersion.cmake
dist_exe/SURF/_internal/pyogrio/proj_data/: proj-config-version.cmake  proj-targets.cmake  (+1 more)
dist_exe/SURF/_internal/pyproj/: _compat.c  _context.c  _geod.c  _network.c  _version.c  database.c
dist_exe/SURF/_internal/rasterio/: _base.c  _env.c  _err.c  _features.c  _fill.cpp  _io.c  _transform.c  _warp.cpp
dist_exe/SURF/_internal/shapely-2.1.2.dist-info/: RECORD
dist_exe/SURF/_internal/surf/: __init__.py  cli.py  geometry_utils.py  pipeline.py  raster_output.py  rate_of_change.py  water_level.py
dist_exe/SURF/_internal/tqdm-4.68.4.dist-info/: RECORD
dist_exe/ShorelineUncertainty/_internal/: _asyncio.pyd  _lzma.pyd  _overlapped.pyd  _queue.pyd  _ssl.pyd  _uuid.pyd  _wmi.pyd  _zoneinfo.pyd  select.pyd  unicodedata.pyd
dist_exe/ShorelineUncertainty/_internal/geopandas-1.1.4.dist-info/: RECORD
dist_exe/ShorelineUncertainty/_internal/pyogrio/: _compat.py  _geometry.c  _ogr.c  core.py  geopandas.py  util.py
dist_exe/ShorelineUncertainty/_internal/pyogrio-0.13.0.dist-info/: RECORD
dist_exe/ShorelineUncertainty/_internal/pyproj/: _crs.c  _sync.c  _transformer.c  list.c
dist_exe/ShorelineUncertainty/_internal/pyproj-3.7.2.dist-info/: RECORD
dist_exe/ShorelineUncertainty/_internal/rasterio/: _example.c  _filepath.cpp  _version.c  _vsiopener.c  cache.c  crs.c  shutil.c
dist_exe/ShorelineUncertainty/_internal/rasterio-1.5.0.dist-info/: RECORD
dist_exe/ShorelineUncertainty/_internal/shoreline_uncertainty/: __init__.py  comparison.py  config.py  critical_areas.py  probability_surface.py  uncertainty.py  water_level.py
dist_pypi/: shoreline_surf-0.1.0-py3-none-any.whl  shoreline_uncertainty-0.1.0-py3-none-any.whl
examples/: config_prob_change.yaml  config_with_professionals.yaml  config_without_professionals.yaml  generate_synthetic_data.py  make_screenshots.py
examples/data/allegan/: allegan_shoreline_1938.dbf  allegan_shoreline_1938.sbn  allegan_shoreline_1938.sbx  allegan_shoreline_1938.shp  allegan_shoreline_1938.shp.xml  allegan_shoreline_1938.shx  allegan_shoreline_2010.dbf  allegan_shoreline_2010.prj  allegan_shoreline_2010.sbn  allegan_shoreline_2010.sbx  allegan_shoreline_2010.shp  allegan_shoreline_2010.shp.xml  allegan_shoreline_2010.shx
gui_app/: README.md  __main__.py  app.py  build_exe.py
original_program/arcgis_pro/: Cast_Transects.py  Identify_Critical_Areas.py  add_field.py  copy_output_table.py  create_fc.py  extract_intersected_points.py  intersecting_epsilon_bands.py  intersecting_epsilon_bands_2017_UPDATE.py  merge_results.py  perkal_bands.py  professional_comparison.py  raster_buffers_analysis.py  shoreline_transects.ipynb  transect_analysis.py
qgis_plugin/shoreline_uncertainty_qgis/: __init__.py  comparison_qgis.py  config_qgis.py  critical_areas_qgis.py  dialog.py  epsilon_bands_qgis.py  geometry_utils_qgis.py  io_utils_qgis.py  metadata.txt  pipeline_qgis.py  plugin.py  probability_surface_qgis.py  processing_algorithm.py  processing_provider.py  raster_output_qgis.py  rate_of_change_qgis.py  result_loader.py  runner.py  transects_qgis.py  uncertainty_qgis.py  water_level_qgis.py
qgis_plugin/surf_qgis/: __init__.py  dialog.py  plugin.py  processing_provider.py
qgis_plugin/tests/: README.md  conftest.py  qgis_stub.py  test_comparison_qgis.py  test_critical_areas_qgis.py  test_dialog_qgis.py  test_epsilon_bands_qgis.py  test_geometry_utils_qgis.py  test_io_utils_qgis.py  test_pipeline_qgis.py  test_plugin_run_qgis.py  test_probability_surface_qgis.py  test_processing_algorithm_qgis.py  test_processing_provider_qgis.py  test_raster_output_qgis.py  test_rate_of_change_qgis.py  test_result_loader_qgis.py  test_runner_qgis.py  test_transects_qgis.py  test_water_level_qgis.py
shoreline_uncertainty/: cli.py  epsilon_bands.py  io_utils.py  pipeline.py  transects.py
surf/: config.py
tests/: conftest.py  test_comparison.py  test_config.py  test_critical_areas.py  test_epsilon_bands.py  test_io_utils.py  test_pipeline.py  test_probability_surface.py  test_raster_output.py  test_rate_of_change.py  test_transects.py  test_uncertainty.py  test_water_level.py
(+8 files in other folders)
