[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shoreline-surf"
version = "0.1.0"
description = "SURF: Shoreline Uncertainty and Rate Framework — arcpy-free shoreline change analysis with positional uncertainty (Wernette et al. 2017, 2020)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Phillipe Wernette", email = "pwernett@msu.edu" },
]
keywords = [
    "shoreline",
    "coastal",
    "geomorphology",
    "uncertainty",
    "GIS",
    "remote sensing",
    "change detection",
    "geopandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
    "rasterio>=1.3",
    "pyogrio>=0.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
examples = ["matplotlib>=3.7", "contextily>=1.5", "pillow>=10.0"]

[project.urls]
Homepage = "https://github.com/pwernett/shoreline-surf"
Repository = "https://github.com/pwernett/shoreline-surf"
"Bug Tracker" = "https://github.com/pwernett/shoreline-surf/issues"
DOI = "https://doi.org/10.5281/zenodo.21285653"

[project.scripts]
surf = "surf.cli:main"

[tool.setuptools.packages.find]
# gui_app is intentionally excluded from the installable package;
# it is bundled as a standalone exe via PyInstaller.
include = ["surf*"]